--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ body {
   font-family: 'East Sea Dokdo', cursive;
   background-image: url('/images/ttolttol.jpeg');
 
-  color: rgb(15, 245, 233);
+  color: rgb(2, 65, 61);
 
-  font-size: 3vw;
+  font-size: 5vw;
 }
 
 .Container {
@@ -24,10 +24,11 @@ body {
   border: 5px solid white;
   border-radius: 5px;
 
-  background-color: rgba(245, 245, 245, 0.3);
+  background-color: rgba(245, 245, 245, 0.5);
   text-align: center;
 
-  padding: 10px;
+  width: 50vw;
+  padding: 20px;
 }
 
 h1 {
@@ -41,7 +42,7 @@ h1 {
   justify-content: center;
   align-items: center;
 
-  font-weight: 500;
+  font-weight: 600;
   margin-bottom: 0.2px;
 }
 
